--- a/src/Run.ipynb
+++ b/src/Run.ipynb
@@ -488,11 +488,111 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The following model fits Ridge to the interaction design"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R^2 train score</th>\n",
+       "      <th>R^2 test score</th>\n",
+       "      <th>MSE train score</th>\n",
+       "      <th>MSE test score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>k1_bwd_effective</th>\n",
+       "      <td>0.930730</td>\n",
+       "      <td>0.929903</td>\n",
+       "      <td>0.077231</td>\n",
+       "      <td>0.077959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k1_fwd_effective</th>\n",
+       "      <td>-1.113564</td>\n",
+       "      <td>-1.120566</td>\n",
+       "      <td>0.351510</td>\n",
+       "      <td>0.353405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k2_bwd_effective</th>\n",
+       "      <td>0.905424</td>\n",
+       "      <td>0.905372</td>\n",
+       "      <td>0.015764</td>\n",
+       "      <td>0.015864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k2_fwd_effective</th>\n",
+       "      <td>0.930729</td>\n",
+       "      <td>0.929899</td>\n",
+       "      <td>0.077232</td>\n",
+       "      <td>0.077963</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  R^2 train score  R^2 test score  MSE train score  \\\n",
+       "k1_bwd_effective         0.930730        0.929903         0.077231   \n",
+       "k1_fwd_effective        -1.113564       -1.120566         0.351510   \n",
+       "k2_bwd_effective         0.905424        0.905372         0.015764   \n",
+       "k2_fwd_effective         0.930729        0.929899         0.077232   \n",
+       "\n",
+       "                  MSE test score  \n",
+       "k1_bwd_effective        0.077959  \n",
+       "k1_fwd_effective        0.353405  \n",
+       "k2_bwd_effective        0.015864  \n",
+       "k2_fwd_effective        0.077963  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridgeRegInteractions = regressions.reproduction_ridge(interaction_only= True)\n",
+    "ridgeRegInteractions.scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following model fits Ridge to the basic design"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -516,67 +616,67 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MSE test score</th>\n",
-       "      <th>MSE train score</th>\n",
-       "      <th>R^2 test score</th>\n",
        "      <th>R^2 train score</th>\n",
+       "      <th>R^2 test score</th>\n",
+       "      <th>MSE train score</th>\n",
+       "      <th>MSE test score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>k1_bwd_effective</th>\n",
-       "      <td>0.930287</td>\n",
-       "      <td>0.929539</td>\n",
-       "      <td>0.077725</td>\n",
-       "      <td>0.078364</td>\n",
+       "      <td>0.871988</td>\n",
+       "      <td>0.871242</td>\n",
+       "      <td>0.142723</td>\n",
+       "      <td>0.143199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k1_fwd_effective</th>\n",
-       "      <td>-477.375359</td>\n",
-       "      <td>-478.636582</td>\n",
-       "      <td>79.559251</td>\n",
-       "      <td>79.934249</td>\n",
+       "      <td>0.900498</td>\n",
+       "      <td>0.899147</td>\n",
+       "      <td>0.016548</td>\n",
+       "      <td>0.016808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k2_bwd_effective</th>\n",
-       "      <td>0.689472</td>\n",
-       "      <td>0.688153</td>\n",
-       "      <td>0.051759</td>\n",
-       "      <td>0.052278</td>\n",
+       "      <td>0.902148</td>\n",
+       "      <td>0.901832</td>\n",
+       "      <td>0.016310</td>\n",
+       "      <td>0.016457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k2_fwd_effective</th>\n",
-       "      <td>0.929611</td>\n",
-       "      <td>0.928910</td>\n",
-       "      <td>0.078478</td>\n",
-       "      <td>0.079063</td>\n",
+       "      <td>0.871988</td>\n",
+       "      <td>0.871243</td>\n",
+       "      <td>0.142723</td>\n",
+       "      <td>0.143198</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  MSE test score  MSE train score  R^2 test score  \\\n",
-       "k1_bwd_effective        0.930287         0.929539        0.077725   \n",
-       "k1_fwd_effective     -477.375359      -478.636582       79.559251   \n",
-       "k2_bwd_effective        0.689472         0.688153        0.051759   \n",
-       "k2_fwd_effective        0.929611         0.928910        0.078478   \n",
+       "                  R^2 train score  R^2 test score  MSE train score  \\\n",
+       "k1_bwd_effective         0.871988        0.871242         0.142723   \n",
+       "k1_fwd_effective         0.900498        0.899147         0.016548   \n",
+       "k2_bwd_effective         0.902148        0.901832         0.016310   \n",
+       "k2_fwd_effective         0.871988        0.871243         0.142723   \n",
        "\n",
-       "                  R^2 train score  \n",
-       "k1_bwd_effective         0.078364  \n",
-       "k1_fwd_effective        79.934249  \n",
-       "k2_bwd_effective         0.052278  \n",
-       "k2_fwd_effective         0.079063  "
+       "                  MSE test score  \n",
+       "k1_bwd_effective        0.143199  \n",
+       "k1_fwd_effective        0.016808  \n",
+       "k2_bwd_effective        0.016457  \n",
+       "k2_fwd_effective        0.143198  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ridgeRegInteractions = regressions.reproduction_ridge(interaction_only= True)\n",
-    "ridgeRegInteractions.scores"
+    "ridgeRegSimple = regressions.reproduction_ridge(degree = 1)\n",
+    "ridgeRegSimple.scores"
    ]
   },
   {
